--- a/localisation/simp_chinese/MD_cartel_content_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_cartel_content_l_simp_chinese.yml
@@ -64,8 +64,8 @@
  raid_drug_convoys_decision_desc: "通过在路线进行抢救行动，我们可以不费任何费用就迅速将毒品从网络中除去，但大型的卡特尔通常不会受到这种劫掠的影响，并会迅速适应我们的监督系统，对较小的卡特尔来说，这种攻击可以削弱他们失去基本现金流并在之后自相残杀。"
  raid_cartel_hideouts_decision: "突袭卡特尔藏身处"
  raid_cartel_hideouts_decision_desc: "通过劫掠卡特尔的据点和补给站，我们可阻碍他们运输药品、组织并抵抗侵入他们领土的行为，这通常表现在他们夺取可以用来对付我们或其敌人的车辆和武器上，这样就可以得到卡特尔与其虚弱的对手开战的额外好处或反面。"
- raid_distribution_centres_decision: "突袭经销中心"
- raid_distribution_centres_decision_desc: "通过劫掠卡特尔经销中心，例如药品商场的库存，我们可以从市场中去除大量毒品，还有好处，通过查封大量脏钱和逮捕毒品经销商阻碍今后毒品的分发，但这种劫掠极有可能实施报复性打击，因为这并不妨碍卡特尔实施暴力的能力。"
+ raid_distribution_centres_decision: "突袭分销中心"
+ raid_distribution_centres_decision_desc: "通过劫掠卡特尔经销中心，例如毒品商场的库存，我们可以从市场中去除大量毒品，还有好处，通过查封大量脏钱和逮捕毒品经销商阻碍今后毒品的分发，但这种劫掠极有可能实施报复性打击，因为这并不妨碍卡特尔实施暴力的能力。"
  raid_refinement_centres_decision: "突袭经销中心"
  raid_refinement_centres_decision_desc: "通过突袭毒品实验室、种植园或种植房屋，我们可以抑制卡特尔创造新药进行分销的能力，同时使它们大大退缩。这种挫折通常足以阻碍他们的生产数月，因为他们试图弥补损失。与此同时，它不太可能招致报复性打击，因为卡特尔的大部分资源都用于保护其领土。"
  target_local_cartel_leaders_decision: "目标 本地卡特尔负责人"
@@ -267,7 +267,7 @@
  cartel_event.54.d: "在我们最近的一次劫掠之后，卡特尔对我们的一所警察局发动了报复性的袭击，我们的警官在死后英勇地坚持了出来，经过几个小时后，他们接受了增援，设法将卡特尔驱散，这一事件已成为全国新闻中反对卡特尔的一个聚集点。"
  cartel_event.54.a: "非常好。"
  cartel_event.55.t: "贩毒集团击落直升机"
- cartel_event.55.d: "最近的一次突袭期间，我方的一架警察直升机被卡特尔击落。事故显示，一名行走的子弹击中了飞行员的颈部，导致副驾驶无法及时恢复控制，导致灾难性的爆炸，失去如此重要的设备，更不用说其乘员，都令人羞愧。"
+ cartel_event.55.d: "在最近的一次突袭中，我们的一架警用直升机被贩毒集团击落。对这一事件的回顾显示，一颗流弹击中了飞行员的颈部，由于副驾驶未能及时恢复控制，导致了灾难性的坠机事故。失去如此重要的设备，更不用说它的机组人员，是一种耻辱。"
  cartel_event.55.a: "不幸。"
  cartel_event.56.t: "卡特尔刽子手"
  cartel_event.56.d: "一个来自我国卡特尔出没地区之一的男子被一位好心的撒玛利亚人发现并赶往医院，现在躺在可能很快就会被证明是他临终的床上。但是，我们有机会帮助他。他需要被转移到设施更好的医院，这是我们附近的一架军用直升机可以做到的。"
@@ -290,18 +290,18 @@
  cartel_event.51.d1: "最近，我们设法查封了数百公斤的毒品，逮捕了几名低级的卡特尔成员，并夺取了几辆民用车辆，伤亡很少，这应该足以在短时间内停止贸易，但任何规模足够的卡特尔都能轻易吸收这些损失。"
  cartel_event.51.t2: "成功劫掠集团藏身处"
  cartel_event.51.d2: "在最近对一家已知的卡特尔据点的袭击中，我们设法在扣押或销毁几件可用的军事装备和简易武器的同时，杀死或逮捕了几十名卡特尔成员，这一拳头可能波及其他组织试图利用这一暂时性的弱点。"
- cartel_event.51.t3: "经销中心突袭成功"
- cartel_event.51.d3: "在最近对一个已知配送中心的罢工中，我们设法没收了价值数十万美元的肮脏钱和毒品。我们还开始围捕与该地点有关的众多毒贩，严重阻碍了他们将毒品推向市场并获利的能力。尽管我们取得了成功，但我们仍应警惕报复性袭击的可能性。"
- cartel_event.51.t4: "经销中心突袭成功"
- cartel_event.51.d4: "在最近对一个已知销售中心的一次袭击中，我们设法摧毁了价值数十万美元的设备和毒品。我们还设法逮捕了许多参与改进的人，这将使他们在未来生产更多药物时处于劣势。尽管我们取得了成功，但我们仍应警惕报复性袭击的可能性。"
+ cartel_event.51.t3: "分销中心突袭成功"
+ cartel_event.51.d3: "在最近对一个已知的分销中心的一次袭击中，我们设法查获了价值数十万美元的赃款和毒品。我们还开始围捕与该地点有关的许多毒贩，严重阻碍了他们将毒品推向市场并从中获利的能力。尽管我们取得了成功，但我们应该警惕报复性攻击的可能性。"
+ cartel_event.51.t4: "精炼中心突袭成功"
+ cartel_event.51.d4: "在最近一次对一家已知精炼中心的袭击中，我们成功摧毁了价值数十万美元的设备和毒品。我们还成功逮捕了许多参与提炼的人，这将使他们在未来生产更多药物时处于不利地位。尽管我们取得了成功，但我们应该警惕报复性攻击的可能性。"
  cartel_event.51.t5: "打击毒品车队失败"
  cartel_event.51.d5: "在最近一次沿着已知毒品路线的企图袭击中，我们的部队不堪重负，被迫撤退，留下了几名伤亡人员。有关该事件的信息已经泄露给公众，降低了对我们政府的信心。我们应该警惕报复性袭击的可能性。"
  cartel_event.51.t6: "贩毒隐蔽突袭失败"
  cartel_event.51.d6: "最近，有人企图打击已知的卡特尔的据点，我们的部队被击垮，被迫撤退，留下若干人员伤亡，这一事件的信息已经泄露到公众中，削弱了人们对政府的信心，我们应该警惕遭到报复性攻击的可能性。"
- cartel_event.51.t7: "销售中心突袭失败"
- cartel_event.51.d7: "在最近对一个已知的卡特尔配送中心的一次未遂袭击中，我们的部队不堪重负，被迫撤退，留下了几名伤亡人员。有关该事件的信息已经泄露给公众，降低了对我们政府的信心。此时，与该位置相关的任何人都已分散。我们应该警惕报复性袭击的可能性。"
- cartel_event.51.t8: "销售中心突袭失败"
- cartel_event.51.d8: "在最近对一个已知的卡特尔提炼中心的一次未遂袭击中，我们的部队不堪重负，被迫撤退，留下了几名伤亡人员。有关该事件的信息已经泄露给公众，降低了对我们政府的信心。我们应该警惕报复性袭击的可能性。"
+ cartel_event.51.t7: "分销中心突袭失败"
+ cartel_event.51.d7: "在最近对一个已知的卡特尔分销中心的一次未遂袭击中，我们的部队不堪重负，被迫撤退，留下了几名伤亡人员。有关该事件的信息已经泄露给公众，降低了对我们政府的信心。此时，与该位置相关的任何人都已分散。我们应该警惕报复性袭击的可能性。"
+ cartel_event.51.t8: "精炼中心突袭失败"
+ cartel_event.51.d8: "在最近对一个已知的卡特尔精炼中心的一次未遂袭击中，我们的部队不堪重负，被迫撤退，留下了几名伤亡人员。有关该事件的信息已经泄露给公众，降低了对我们政府的信心。我们应该警惕报复性袭击的可能性。"
  cartel_event.51.a: "突袭结束"
  cartel_event.52.t: "贩毒集团的末日"
  cartel_event.52.d: "经过几十年的冲突和许多人的牺牲，我们清除了国内任何残余的卡特尔，然而，我们仍不能幸免于他们的影响，我们地区其他国家还在这些怪物的统治下受苦，而现在我们拥有足够的怪物狩猎专门知识。"
