--- a/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
@@ -59,42 +59,14 @@
  BLR_50_air_base_desc: "红星航空基地第50混合命令不仅有着英雄的过往，更有与时俱进的尊严。红星航空基地的飞行员们举办国家军事阅兵，赢得并成为国际军队游戏中的赢家——但最重要的问题是，飞行员们可靠地确保了白俄罗斯领土的和平与稳定。"
  BLR_land_forces: "白俄罗斯陆军"
  BLR_land_forces_desc: "白俄罗斯陆军是白俄罗斯的武装力量之一。这支部队被设计用来应对敌人的打击，并在敌人发动侵略时击败他。"
- BLR_kvo_army: "混合型军队"
- BLR_kvo_army_desc: "我们将从这两个理论中汲取优势。"
- BLR_prof_army: "职业化军队"
- BLR_prof_army_desc: "我们将建立一支强而有力的军队。"
  BLR_sso: "特种作战部队的建立"
  BLR_sso_desc: "白俄罗斯共和国武装部队特种作战部队是白俄罗斯共和国武装部队的一支高度机动的部队，是苏联空降部队和苏联格鲁乌特种部队的后继者。白俄罗斯共和国。主要任务：反破坏活动、情报、打击非法武装团体、使用特殊方法执行各种任务，以结束针对白俄罗斯共和国的武装冲突。它们是战略威慑的主要要素之一。"
- BLR_mass_army: "大规模征兵制度"
- BLR_mass_army_desc: "我们的优势在数量上"
- BLR_army1: "2年兵役制"
- BLR_army1_desc: "2年将使任何平民成为优秀的士兵。"
- BLR_politrucks: "强化军官权力"
- BLR_politrucks_desc: "苏联时期的政治官员在军队中拥有很大的权力 - 我们将恢复这种做法。"
- BLR_contract: "大规模招聘活动"
- BLR_contract_desc: "我们将开展大规模的征兵活动。"
- BLR_otmena: "取消高等教育治军计划"
- BLR_otmena_desc: "高等教育将不再是服役的免死金牌。"
  BLR_trans_army: "建立运输部队"
  BLR_trans_army_desc: "白俄罗斯运输部队是白俄罗斯武装部队的军种。它负责通过卡车、铁路和航空运输人员和物资，并承担全国其他军种部队运输保障的任务。"
  BLR_uniform_army: "采用新的军装"
  BLR_uniform_army_desc: "我们的士兵穿着过时的制服 - 我们需要解决这个问题。"
- BLR_exer_army: "进行陆军演习"
- BLR_exer_army_desc: "鉴于新军种的引进，我们的部队需要进行演习。"
- BLR_sapers: "扩大作战工兵训练"
- BLR_sapers_desc: "我们将加强未来战争的工兵训练计划，使敌方地雷不再成为我们的障碍。"
- BLR_arta: "火炮是战争之神"
- BLR_arta_desc: "苏联的炮兵压制学说非常适合我军情况。"
  BLR_sso_expand: "扩编特种作战部队"
  BLR_sso_expand_desc: "我们将扩大特种作战部队的投资，组建世界上最好的特种部队！"
- BLR_ptrk_commands: "组建反坦克导弹小队"
- BLR_ptrk_commands_desc: "反坦克导弹是未来战争的主要武器，我们将加强反坦克导弹分队的训练。"
- BLR_munshtra: "常备训练"
- BLR_munshtra_desc: "旨在建立武装部队各部门互动的定期演习。"
- BLR_mechanize: "军队机械化"
- BLR_mechanize_desc: "机械化部队是强大的部队。 队中的装甲运兵车、步兵战车等越多，突破敌人的机会就越大。"
- BLR_unification: "现代军队"
- BLR_unification_desc: "我们的军队将是最现代化的。"
  BLR_defence_strategy: "防御战略"
  BLR_defence_strategy_desc: "我们这个小国只能指望敌人不进攻，但如果进攻了，那么我们必须准备好保卫自己。"
  BLR_east_defence: "防御东方"
@@ -718,8 +690,8 @@
  BLR_true_political_and_national_freedom_desc: "真正的政治自由的开端，就是从我们国家大清洗中遭受的破坏中恢复过来。现在是时候前进，实现我们人民真正的愿望了。"
  BLR_Taler_ruble: "白俄罗斯神话"
  BLR_Taler_ruble_desc: "我们必须彻底丢掉卢布，用我们的新货币取代它。"
- BLR_National_science: "国家科学"
- BLR_National_science_desc: "我们将投资我们的科学和教育来创建一个强大而独立的国家。"
+ BLR_National_science: "科学与经济增长"
+ BLR_National_science_desc: "作为一个独立国家，我们将开始发展我们自己的科学和经济。"
  BLR_Delete_KGB: "解散KGB"
  BLR_Delete_KGB_desc: "德意志国家应该被废除，并以新的结构取代。"
  BLR_Reform_Police: "警察改革"
@@ -2016,7 +1988,7 @@
  belarus_another.51.a: "中白友谊？"
  belarus_another.52.t: "牛仔裤革命"
  belarus_another.52.d: "白俄罗斯人民站出来抗议合法政府，要求整个政府辞职。我希望我们为此做好了充分的准备？"
- belarus_another.52.a: "等待我们的是什么"
+ belarus_another.52.a: "镇压抗议"
  belarus_another.53.t: "民族布尔什维克在俄罗斯夺取政权"
  belarus_another.53.d: "们忠实的支持者终于能够在俄罗斯夺取政权。克里姆林宫现在是我们的了。我们的领导人已准备好领导俄罗斯。"
  belarus_another.53.a: "俄罗斯就是一切。其他的都不重要。"
@@ -2175,3 +2147,22 @@
  BLR_peacerota_idea: "维和特遣队"
  BLR_union_programm_desc: "有必要加强我们各国的一体化，因此我们将就与俄罗斯一体化的几个路线图达成一致。"
  BLR_Foreign_legion_idea: "外籍军团"
+ BLR_sso_idea: "特种作战部队"
+ BLR_ter_orobona_idea: "国土防御"
+ BLR_end_reform: "完成军队改革"
+ BLR_end_reform_desc: "我们将完成军队改革，达到现代化标准."
+ belarus_another.52.b: "尝试谈判"
+ belarus_another.55.t: "牛仔裤革命"
+ belarus_another.55.d: "白俄罗斯的抗议活动愈演愈烈，白俄罗斯政府无法镇压，也许我们应该介入并拯救他们的政府？"
+ belarus_another.55.a: "我们将派遣我们的专家"
+ belarus_another.55.b: "我们不要干涉"
+ belarus_another.56.t: "牛仔裤革命"
+ belarus_another.56.d: "俄罗斯向我们派遣了专家，我们一起镇压了抗议活动！"
+ belarus_another.56.a: "谢谢你，俄罗斯"
+ belarus_another.57.t: "牛仔裤革命"
+ belarus_another.57.d: "我们秘密向俄罗斯政府寻求帮助，但他们拒绝了我们，这使得我们在革命运动中孤立无援。"
+ belarus_another.57.a: "上帝救救我们"
+ belarus_another.58.t: "牛仔裤革命"
+ belarus_another.58.d: "抗议活动愈演愈烈，一些行政大楼已经被占领，其他城市也已经开始骚乱，加上一些将军已经投奔叛军，怎么办？"
+ belarus_another.58.a: "我们会战斗到底!"
+ belarus_another.58.b: "我们将和平交出权力"
