--- a/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
@@ -889,12 +889,12 @@
  china.17.d: "第九世哲布尊丹巴呼图克图的发现结果已经出来了，索南拱·延参米玛就是第九世哲布尊丹巴呼图克图！延参米玛是一位非常有名的高僧，他将为外蒙古地区带来稳定和繁荣。"
  china.17.a: "中央已经掷签了，你来做哲布尊丹巴呼图克图。"
  china.18.t: "九世哲布尊丹巴呼图克图完成坐床仪式。"
- china.18.d: "今天有消息称，第九世哲布尊丹巴呼图克图在乌兰巴托额尔德尼祖寺完成坐床法会，此举标志着延参米玛正式成为哲布尊丹巴呼图克图。 仪式结束后，九世哲布尊丹巴呼图克图向党、政府和全体信徒表示感谢，表达对世界和平的希望。 他说。"
+ china.18.d: "今天有消息称，第九世哲布尊丹巴呼图克图在乌兰巴托光显寺完成坐床法会，此举标志着延参米玛正式成为哲布尊丹巴呼图克图。 仪式结束后，九世哲布尊丹巴呼图克图向党、政府和全体信徒表示感谢，表达对世界和平的希望。 他说。"
  china.18.a: "让岁月多一些辉煌、让人生多一些精彩。"
  china.19.t: "中国提供特别行政区地位"
- china.19.d: "我们的中国朋友提出要拉近距离，让我们这个内陆国家加入一个更大的大家庭，恢复荣耀，分享庞大的中国市场。当然，会放弃蒙古的独立，但这只是一个小小的代价，对吧？"
- china.20.t: "蒙古拒绝了我们的要求！"
- china.20.d: "蒙古竟然胆敢抵制中国统一的愿望！我们得准备一个回答。"
+ china.19.d: "我们的中国朋友提出要拉近距离，让我们这个内陆国家加入一个更大的大家庭，恢复荣耀，分享庞大的中国市场。当然，蒙古目前的国家地位会略有调整，但对于巨大的利益来说，这个代价不算什么吧？"
+ china.20.t: "外蒙古方面拒绝了我们的要求！"
+ china.20.d: "外蒙古方面居然企图阻止中国统一的进程！既然他们敬酒不吃吃罚酒，一次特别军事行动是在所难免了。"
  china.21.t: "中国收回外蒙古"
  china.21.d: "终于，外蒙古地区现在重新归于我们麾下，一百年的屈辱终于结束了，我们将以新的姿态面对未来。"
  china.21.a: "为中国新的海棠叶喝彩。"
@@ -1414,7 +1414,7 @@
  china_news.18.d: "经过半个多世纪的隐忍，中国决定不再容忍雅尔塔会议上的背叛，将使用武力收回外蒙古地区。处于遥远内亚地区的乌兰巴托政府的未来几乎没有希望。事情会如何发展，没有人知道。"
  china_news.18.a: "外什么？"
  china_news.19.t: "外蒙古特别行政区成立"
- china_news.19.d: "鉴于喀尔喀地区对最近的自由化做出了积极反应，蒙古领导人决定用“特别行政区”取代外蒙古的“国家”地位。这种地位的变化伴随着很大程度的统一。"
+ china_news.19.d: "经过了最近一段时间的外蒙古与内地之间深化友谊举动之后，在意识到自身无法脱离内地的支持继续存在之后，蒙古领导人决定用“特别行政区”取代外蒙古的“国家”地位。这种地位的变化伴随着很大程度的统一。"
  china_news.19.a: "中国正在重拾昔日的碎片。"
  china_news.20.t: "中国放弃反对台湾独立立场"
  china_news.20.d: "[CHI.GetLeader]告诉记者，如果中华民国（非正式名称为台湾）寻求独立，“我们不会阻止他们”，这标志着政策的巨大变化。过去，中国曾强烈反对台独的前景，甚至威胁使用武力阻止。中国当局改变主意的原因仍不清楚。"
@@ -1460,7 +1460,7 @@
  china.53.a: "干得好。"
  china.20.a: "现在立即采取行动！"
  china.54.t: "台海之战结束！"
- china.54.d: "台海之战即将结束。长达半个世纪的恩怨在这一刻终于结束了。解放军军靴攻破重庆南路一段122号。如果规划台湾地区的未来成为当前的当务之急，我们的选择是什么？"
+ china.54.d: "台海之战即将结束。长达半个世纪的恩怨在这一刻终于结束了。解放军军靴踏破重庆南路一段122号。如果规划台湾地区的未来成为当前的当务之急，我们的选择是什么？"
  china.54.a: "整个台湾地区终于回到了祖国的怀抱"
  china.54.b: "我们有别的想法"
  china.55.t: "台海之战结束！"
@@ -1478,7 +1478,7 @@
  china_news.31.b: "他们好大的胆子？！"
  south_china_sea_clash.11.b: "中沙群岛可以共享。"
  south_china_sea_clash.11.c: "我们应该放弃对这些岛屿的控制。"
- china.56.t: "外蒙古之战结束！"
+ china.56.t: "外蒙古特别军事行动结束！"
  china.56.d: "外蒙古之战即将结束。面对猛烈的南方攻势，乌兰巴托当局毫无悬念地惨败，蒙古高原迎来了昔日的主人。如果规划外蒙古的未来成为当前的当务之急，我们的选择是什么？"
  china.56.a: "外蒙古特别行政区今日成立"
  china.56.b: "整个外蒙古地区终于回到了祖国的怀抱"
@@ -1555,13 +1555,13 @@
  china_news.38.a: "原神启动，其乐无穷。"
  china_news.38.b: "你现在的症状就是玩原神玩的。"
  china.63.t: "中国完成外蒙古战争准备"
- china.63.d: "长久以来，这个被苏俄夺走并扶植的卫星国一直向我们展露敌意，装甲部队从扎门乌德出发只需要三个小时即可到达北京，是时候终结这个雅尔塔协议的丑陋产物，迈向伟大祖国的统一了。\n\n“浊酒一杯家万里，燕然未勒归无计。”"
+ china.63.d: "长久以来，这个被苏俄夺走并扶植的卫星国一直向我们展露敌意，装甲部队从扎门乌德出发只需要一个晚上即可到达北京，是时候终结这个雅尔塔协议的丑陋产物，迈向伟大祖国的统一了。\n\n“浊酒一杯家万里，燕然未勒归无计。”"
  china.63.a: "勿谓言之不预。"
  china.63.b: "还我外蒙古！即刻开战！"
  south_china_sea_minor_recoverd: "南海诸岛收复"
  south_china_sea_minor_recoverd_desc: "经过了多次南海争锋，数不清的明争暗斗之后，南海诸岛终于全部回到了祖国的怀抱，中国海军的海巡船时时刻刻在这里保持着警戒，守卫着南海上的岛链。"
  china_news.39.t: "流浪地球系列"
- china_news.39.d: "由郭帆执导的中国科幻电影《流浪地球》根据刘慈欣原创的科幻短篇小说《流浪地球》改编。讲述了人类在地球上安装发动机以避免太阳氦闪灾难并在宇宙中流浪，以及在此过程中遇到的危机的故事。\n\n该系列电影是中国科幻电影史上的一大突破。"
+ china_news.39.d: "由郭帆执导的中国科幻电影《流浪地球》根据刘慈欣原创的科幻短篇小说《流浪地球》改编。讲述了人类在地球上安装发动机以避免太阳氦闪灾难并在宇宙中流浪，以及在此过程中遇到的危机的故事。\n\n该系列电影无论是电影技术还是制作水平都是中国科幻电影史上的一大突破。"
  china_news.39.a: "啊，人类。"
  china_news.39.b: "我们的人一定可以完成任务。无论虚实，不计存亡。"
  jebtsundamba_sat: "九世哲布尊丹巴呼图克图完成坐床仪式"
