--- a/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
@@ -1765,7 +1765,7 @@
  PER_political.145.a: "非常好"
  PER_political.146.t: "亚美尼亚拒绝 ！"
  PER_political.146.d: "亚美尼亚拒绝了我们在他们国家修建一条大铁路的提议。"
- PER_political.146.a: "他们的老板"
+ PER_political.146.a: "他们的损失"
  PER_political.147.t: "伊朗提出铁路项目"
  PER_political.147.d: "伊朗政府正在提议修建一条从我国南部一直延伸到北部的铁路项目。这确实有利于我们自己的基础设施，这意味着从长远来看我们必须减少支出，但接受也意味着伊朗公司在我们国家获得影响力。"
  PER_political.147.a: "当然，为什么不呢？"
