--- a/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
@@ -4491,3 +4491,58 @@
  russia.107.d: "人们知道一个新的政治组织的成立。不久前，新人民党召开了成立大会。大商人安德烈·涅恰耶夫成为该党主席。该党主张言论自由、自由民主，主张保护企业家权利，主张经济和公共管理数字化。只有时间才能证明这样的政党是否能够在政治体系中站稳脚跟，还是会被遗忘。"
  russia.107.a: "新人和旧体系"
  SOV_the_nonparty_TT: "新的政党将会出现。"
+ sov_reunification_category: "俄罗斯统一"
+ sov_reunification_category_desc: "战争结果是俄罗斯四分五裂，尘埃落定，我们必须忍受统一的艰辛。\n当前统一进程：[?THIS.reunification_progress]"
+ start_talks_with_karelia: "开始与[KAE.GetNamewithFlag]谈判"
+ start_talks_with_don: "开始与[DON.GetNamewithFlag]谈判"
+ start_talks_with_csb: "开始与[CSB.GetNamewithFlag]谈判"
+ free_kae: "探讨释放[KAE.GetNamewithFlag]"
+ free_don: "探讨释放[DON.GetNamewithFlag]"
+ free_csb: "探讨释放[CSB.GetNamewithFlag]"
+ SOV_reunification_mission: "统一圆桌会谈"
+ sov_dissolution.1.t: "地方主义抬头"
+ sov_dissolution.1.d: "随着最近的战争形势恶化，更多的国家行为体开始采取独立行动。事情发展到失控只是时间问题。"
+ sov_dissolution.1.a: "绝不可能"
+ sov_dissolution.2.t: "俄罗斯部分地区重新整合"
+ sov_dissolution.2.d: "经过漫长的谈判，祖国的另一部分在其真正的旗帜下回归。"
+ sov_dissolution.2.a: "更进一步"
+ sov_dissolution.3.t: "俄罗斯要求释放傀儡"
+ sov_dissolution.3.d: "俄罗斯政府已经伸出援手，希望通过谈判释放一名前组成部分，使其成为完全独立的国家。"
+ sov_dissolution.3.a: "财政援助可能会有帮助"
+ sov_dissolution.3.b: "我们可以购买他们的国有资产"
+ sov_dissolution.3.c: "绝对不行"
+ sov_dissolution.4.t: "[FROM.GetName]要求金钱赔偿"
+ sov_dissolution.4.d: "在就可能释放国家部分地区的问题与[FROM.GetNamewithFlag]联系后，他们提议对此类行动进行财政补偿。"
+ sov_dissolution.4.a: "不值一提的小代价"
+ sov_dissolution.4.b: "不可能"
+ sov_dissolution.5.t: "[FROM.GetName]要求国有资产转让"
+ sov_dissolution.5.d: "在就可能释放国家部分地区的问题与[FROM.GetNamewithFlag]联系后，他们提议转让国有资产作为此类行动的补偿。"
+ sov_dissolution.5.a: "不值一提的小代价"
+ sov_dissolution.5.b: "不可能"
+ sov_dissolution.6.t: "[FROM.GetName]否认进行谈判的可能"
+ sov_dissolution.6.d: "在就可能释放国家部分地区的问题与[FROM.GetNamewithFlag]联系后，他们断然拒绝了任何提议。局势依然紧张和不稳定。"
+ sov_dissolution.6.a: "傲慢的傻瓜！"
+ sov_dissolution.7.t: "[SOV.GetName]同意我方条件"
+ sov_dissolution.7.d: "[SOV.GetName]同意我们释放附属国的合理赔偿要求。"
+ sov_dissolution.7.a: "生意而已"
+ sov_dissolution.8.t: "[SOV.GetName]拒绝了我方条款"
+ sov_dissolution.8.d: "[SOV.GetName]拒绝考虑我们释放我们附属国家的合理赔偿要求。"
+ sov_dissolution.8.a: "他们的损失"
+ sov_dissolution.10.t: "谈判期间政治动荡"
+ sov_dissolution.10.d: "在就重新融入俄罗斯国家的可能性进行谈判时，提出了一些不愉快的话题，有效地拖延了谈判进程。"
+ sov_dissolution.10.a: "让我们利用一些可用的工具。"
+ sov_dissolution.10.b: "我们必须把这件事搁置一旁"
+ sov_dissolution.11.t: "缺乏谈判资金"
+ sov_dissolution.11.d: "在就重新融入俄罗斯国家的可能性进行谈判时，提出了货币补偿，作为支付国家转移行政费用的手段。"
+ sov_dissolution.11.a: "部分流程"
+ sov_dissolution.11.b: "没有钱 - 但你要坚持下去！"
+ sov_dissolution.12.t: "不相容的国有资产"
+ sov_dissolution.12.d: "在就可能重新融入俄罗斯国家进行谈判时，有人提出一些国有资产将破产，现在我们必须采取行动来破坏谈判。"
+ sov_dissolution.12.a: "卖掉它，马上。"
+ sov_dissolution.12.b: "我们需要这些资产"
+ SOV_reunification_plus_10: "§G这将使我们的统一进度增加10§!"
+ SOV_reunification_plus_15: "§G这将使我们的统一进度增加15§!"
+ SOV_reunification_plus_20: "§G这将使我们的统一进度增加20§!"
+ SOV_reunification_minus_10: "§R这将使我们的统一进度减少10§!"
+ start_talks_with_esb: "开始与[ESB.GetNamewithFlag]谈判"
+ free_esb: "探讨释放[ESB.GetNamewithFlag]"
