--- a/localisation/simp_chinese/countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/countries_l_simp_chinese.yml
@@ -5298,3 +5298,48 @@
  RYU_nationalist: "琉球"
  RYU_nationalist_DEF: "琉球"
  RYU_nationalist_ADJ: "琉球"
+ CSB_fascism: "中西伯利亚大酋长国"
+ CSB_fascism_DEF: "中西伯利亚大酋长国"
+ CSB_democratic: "中西伯利亚共和国"
+ CSB_democratic_DEF: "中西伯利亚共和国"
+ CSB_neutrality: "中西伯利亚共和国"
+ CSB_neutrality_DEF: "中西伯利亚共和国"
+ CSB_communism: "中西伯利亚共和国"
+ CSB_communism_DEF: "中西伯利亚共和国"
+ CSB_fascism_ADJ: "中西伯利亚"
+ CSB_democratic_ADJ: "中西伯利亚"
+ CSB_neutrality_ADJ: "中西伯利亚"
+ CSB_communism_ADJ: "中西伯利亚"
+ CSB_nationalist: "大中西伯利亚国"
+ CSB_nationalist_DEF: "大中西伯利亚国"
+ CSB_nationalist_ADJ: "中西伯利亚"
+ DON_fascism: "顿河大酋长国"
+ DON_fascism_DEF: "顿河大酋长国"
+ DON_democratic: "顿河共和国"
+ DON_democratic_DEF: "顿河共和国"
+ DON_neutrality: "顿河共和国"
+ DON_neutrality_DEF: "顿河共和国"
+ DON_communism: "顿河共和国"
+ DON_communism_DEF: "顿河共和国"
+ DON_fascism_ADJ: "顿河"
+ DON_democratic_ADJ: "顿河"
+ DON_neutrality_ADJ: "顿河"
+ DON_communism_ADJ: "顿河"
+ DON_nationalist: "顿河哥萨克国"
+ DON_nationalist_DEF: "顿河哥萨克国"
+ DON_nationalist_ADJ: "顿河"
+ ESB_fascism: "东西伯利亚大酋长国"
+ ESB_fascism_DEF: "东西伯利亚大酋长国"
+ ESB_democratic: "东西伯利亚共和国"
+ ESB_democratic_DEF: "东西伯利亚共和国"
+ ESB_neutrality: "东西伯利亚共和国"
+ ESB_neutrality_DEF: "东西伯利亚共和国"
+ ESB_communism: "东西伯利亚共和国"
+ ESB_communism_DEF: "东西伯利亚共和国"
+ ESB_fascism_ADJ: "东西伯利亚"
+ ESB_democratic_ADJ: "东西伯利亚"
+ ESB_neutrality_ADJ: "东西伯利亚"
+ ESB_communism_ADJ: "东西伯利亚"
+ ESB_nationalist: "大东西伯利亚国"
+ ESB_nationalist_DEF: "大东西伯利亚国"
+ ESB_nationalist_ADJ: "东西伯利亚"
