--- a/localisation/simp_chinese/equipment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/equipment_l_simp_chinese.yml
@@ -8183,7 +8183,7 @@
  SOV_cv_awacs_equipment_1: "雅克-33"
  SOV_cv_awacs_equipment_2: "雅克-44"
  CHI_awacs_equipment_1: "空警-2000"
- CHI_awacs_equipment_2: "空警-3000"
+ CHI_awacs_equipment_2: "西安 空警-500"
  CHI_cv_awacs_equipment_1: "雅克-33"
  CHI_cv_awacs_equipment_2: "空警-600"
  FRA_awacs_equipment_1: "波音 E-3 哨兵"
