--- a/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
@@ -752,7 +752,7 @@
  MODIFIER_AIR_NIGHT_PENALTY: "夜间行动惩罚"
  MODIFIER_AIR_NIGHT_PENALTY_DESC: "减少空军夜间行动的惩罚"
  MODIFIER_AIR_WEATHER_PENALTY: "恶劣天气惩罚"
- MODIFIER_AIR_WEATHER_PENALTY_DESC: "减少空军在坏天气下的行动惩罚"
+ MODIFIER_AIR_WEATHER_PENALTY_DESC: "减少空军在恶劣天气下的行动惩罚"
  MODIFIER_AIR_SUPERIORITY_EFFICIENCY: "夺取制空权任务效率"
  MODIFIER_AIR_SUPERIORITY_EFFICIENCY_DESC: "改善执行夺取制空权任务的战机的战术以增加缠斗能力。"
  MODIFIER_AIR_ESCORT_EFFICIENCY: "£air_escort_efficiency_texticon 空军护航效率"
