--- a/localisation/simp_chinese/state_names_l_simp_chinese.yml
+++ b/localisation/simp_chinese/state_names_l_simp_chinese.yml
@@ -760,7 +760,7 @@
  STATE_759: "纽芬兰与拉布拉多"
  STATE_760: "新斯科舍"
  STATE_761: "新不伦瑞克"
- STATE_762: "魁北克"
+ STATE_762: "东魁北克"
  STATE_763: "安大略"
  STATE_764: "缅因"
  STATE_765: "新罕布什尔"
@@ -1157,9 +1157,7 @@
  STATE_1156: "台中"
  STATE_1157: "台南"
  STATE_1158: "澎湖"
- STATE_1159: "赞詹"
- STATE_1160: "阿尔达比勒"
- STATE_1161: "科吉卢耶和博韦艾哈迈德"
- STATE_1162: "恰哈尔马哈勒和巴赫蒂亚里"
- STATE_1163: "加兹温"
- STATE_1164: "厄尔布尔士"
+ STATE_1159: "西魁北克"
+ STATE_1160: "昂加瓦"
+ STATE_1161: "基塔"
+ STATE_1162: "图努"
