--- a/localisation/simp_chinese/MD_money_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_money_l_simp_chinese.yml
@@ -1,10 +1,10 @@
 ﻿l_simp_chinese:
- HIDE_MONEY_TOOLTIP: "点击隐藏资金界面"
- SHOW_MONEY_TOOLTIP: "点击显示资金界面"
+ HIDE_MONEY_TOOLTIP: "£left_mouse_texticon §Y左键点击§!隐藏资金界面"
+ SHOW_MONEY_TOOLTIP: "£left_mouse_texticon §Y左键点击§!显示资金界面"
  TREASURY_TOOLTIP: "我们的国库有$[?treasury] §HB§!。\n我们的每周结余：$[?treasury_rate|+3] §HB§!。"
- TREASURY_TOOLTIP_DELAYED: "我们的国库反映了我们可用于支出的金额，可用于购买和投资。如果国债陷入亏损，债务将每周自动借入以保持正值。"
+ TREASURY_TOOLTIP_DELAYED: "我们的国库反映了我们可用于支出的金额，可用于购买和投资。如果国债陷入亏损，债务将每周自动借入以保持正值。\n\n£left_mouse_texticon §Y左键点击§!打开§Y经济预览§!界面。"
  AC_TREASURY_TOOLTIP: "我们的国库有$[?ROOT.treasury] §HB§!。\n我们的每周结余：$[?treasury_rate|+] §HB§!。"
- AC_TREASURY_TOOLTIP_DELAYED: "我们国库里的钱是我们可用于支出的资金。可用于购买和投资。如果它变成负数，将自动借债以保持正值。"
+ AC_TREASURY_TOOLTIP_DELAYED: "我们国库里的钱是我们可用于支出的资金。可用于购买和投资。如果它变成负数，将自动借债以保持正值。\n"
  INT_INVESTMENTS_TOOLTIP: "我们有$[?int_investments]§HB§!在国际投资中。\n我们将获得每年[?roi_rate|%0]的§H投资回报§!，每周从§H投资收益中§!有[int_investment_rate_color]§HB§!进入国库。\n当前的§Y投资项目§!：[?active_projects]/15"
  INT_INVESTMENTS_TOOLTIP_DELAYED: "£shift_texticon + £left_mouse_texticon §YShift+点击§!以启用/禁用将§H投资收入§!自动再投资到我们的§Y国际投资§!中（启用再投资后，§Y国际投资§!§G收入§!值将在经济预览屏幕中变为黄色。\n\n£GFX_ctrl_texticon + £left_mouse_texticon §YCtrl+左键单击§! 启用/禁用国际投资提议自动拒绝。这意味着您将自动拒绝所有传入的国际投资提议。\n\n£GFX_right_mouse_texticon §Y右键点击§!出售$10亿的外国投资。只能收回总额的60%。£GFX_ctrl_texticon §Y按住Ctrl§!（10倍）或£shift_texticon §YShift§!（100倍）以增加。\n\n[int_reinvestment_toggled]\n[int_auto_rejection_toggled]"
  AC_INT_INVESTMENTS_TOOLTIP: "我们有$[?ROOT.int_investments]§HB§!在国际投资中。\n每周从§H投资收益中§!有$[?ROOT.int_investments_rate]§HB§!进入国库。"
