--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -1190,7 +1190,7 @@
  china.55.c: "There are other plan."
  
  china.56.t: "The Special Military Operation Over Outer Mongolia End!"
- china.56.d: "The Battle of the Outer Mongolia is coming to an end. Facing the fierce southern offensive, the Ulaanbaatar authorities were defeated without any suspense, and the Mongolian plateau ushered in its former master. If planning the future of Outer Mongolia has become the current top priority, what are our choices?"
+ china.56.d: "The special military operation over Outer Mongolia is coming to an end. Facing the fierce southern offensive, the Ulaanbaatar authorities were defeated without any suspense, and the Mongolian plateau ushered in its former master. If planning the future of Outer Mongolia has become the current top priority, what are our choices?"
  china.56.a: "Outer Mongolia SAR was established today"
  china.56.b: "The entire Outer Mongolia region finally returned to the embrace of the motherland."
  china.56.c: "There are other plan."
@@ -1223,10 +1223,10 @@
  china.62.a: "Take Taiwan back! Start the war now!"
  china.62.b: "Don't say it was unpredicted!"
  
- china.63.t: "China Finish War Preparation Over Outer Mongolia"
+ china.63.t: "China Completes Preparations For Military Operation Over Outer Mongolia"
  china.63.d: "For a long time, this satellite country that was taken away and supported by Soviet Russia has been showing hostility to us. It only takes one night for the armored troops to reach Beijing from Zamyn-Uud. It is time to end this ugly product of the Yalta Agreement and move towards the reunification of the great motherland. \n\n'I hold a cup of wine, yet home is far away. The northern warfare not yet won, I can't return but stay.'"
  china.63.a: "Don't say it was unpredicted!"
- china.63.b: "Take Outer Mongolia back! Start the war now!"
+ china.63.b: "Take Outer Mongolia back! Send the troop now!"
  
  china.64.t: "China completes regional strategic goals"
  china.64.d: "Once upon a time, the weak central empire was swallowed up by the swarming powers. After nearly a hundred years of life-and-death struggle, the Chinese people finally completely wiped out the foreign barbarians and eradicated the traitors, and achieved peace under the rule of China in the region."
