--- a/localisation/english/MD_wars_l_english.yml
+++ b/localisation/english/MD_wars_l_english.yml
@@ -32,7 +32,7 @@
  WAR_NAME_SRF_SUD: "Third Sudanese Civil War"
  WAR_NAME_USA_MEX: "Second Mexican-American War"
  WAR_NAME_CHI_TAI: "Taiwan Strait War"
- WAR_NAME_CHI_MON: "Northern Gobi Desert War"
+ WAR_NAME_CHI_MON: "Special Military Operation"
  WAR_NAME_CHI_USA: "Sino-American War"
  WAR_NAME_CHI_JAP: "Third Sino-Japanese War"
  WAR_NAME_JAP_CHI: "Third Sino-Japanese War"
