--- a/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
@@ -1479,7 +1479,7 @@
  south_china_sea_clash.11.b: "中沙群岛可以共享。"
  south_china_sea_clash.11.c: "我们应该放弃对这些岛屿的控制。"
  china.56.t: "外蒙古特别军事行动结束！"
- china.56.d: "外蒙古之战即将结束。面对猛烈的南方攻势，乌兰巴托当局毫无悬念地惨败，蒙古高原迎来了昔日的主人。如果规划外蒙古的未来成为当前的当务之急，我们的选择是什么？"
+ china.56.d: "外蒙古特别军事行动即将结束。面对猛烈的南方攻势，乌兰巴托当局毫无悬念地惨败，蒙古高原迎来了昔日的主人。如果规划外蒙古的未来成为当前的当务之急，我们的选择是什么？"
  china.56.a: "外蒙古特别行政区今日成立"
  china.56.b: "整个外蒙古地区终于回到了祖国的怀抱"
  china.56.c: "我们有别的想法"
@@ -1554,10 +1554,10 @@
  china_news.38.d: "《原神》是一款由米哈游开发、在全球发行的动作角色扮演游戏。\n《原神》发生在奇幻世界提瓦特，这里有七个国家，每个国家都与不同的元素相关，并由不同的神（执政官）统治。故事讲述了星际冒险家旅行者的故事，在游戏开始时，他在抵达提瓦特后与双胞胎兄/妹失散。此后，旅行者在向导派蒙的陪同下穿越提瓦特各国寻找失踪的兄弟姐妹。一路上，两人与无数人成为了朋友，参与了国家事务，并开始揭开这片土地的神秘面纱。"
  china_news.38.a: "原神启动，其乐无穷。"
  china_news.38.b: "你现在的症状就是玩原神玩的。"
- china.63.t: "中国完成外蒙古战争准备"
+ china.63.t: "中国完成对外蒙古军事行动准备"
  china.63.d: "长久以来，这个被苏俄夺走并扶植的卫星国一直向我们展露敌意，装甲部队从扎门乌德出发只需要一个晚上即可到达北京，是时候终结这个雅尔塔协议的丑陋产物，迈向伟大祖国的统一了。\n\n“浊酒一杯家万里，燕然未勒归无计。”"
  china.63.a: "勿谓言之不预。"
- china.63.b: "还我外蒙古！即刻开战！"
+ china.63.b: "还我外蒙古！即刻出兵！"
  south_china_sea_minor_recoverd: "南海诸岛收复"
  south_china_sea_minor_recoverd_desc: "经过了多次南海争锋，数不清的明争暗斗之后，南海诸岛终于全部回到了祖国的怀抱，中国海军的海巡船时时刻刻在这里保持着警戒，守卫着南海上的岛链。"
  china_news.39.t: "流浪地球系列"
