--- a/localisation/simp_chinese/MD_wars_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_wars_l_simp_chinese.yml
@@ -46,5 +46,5 @@
  WAR_NAME_LBA_GNA: "利比亚内战"
  WAR_NAME_SOV_UKR: "特别军事行动"
  WAR_ENVIRONMENTAL_NAME: "环境战争"
- WAR_NAME_CHI_MON: "漠北之战"
+ WAR_NAME_CHI_MON: "特别军事行动"
  WAR_NAME_BRM_NHN: "缅甸的内部冲突"
