blr event and national spirit fix

--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -600,8 +600,14 @@
  #Lukashenko
  BLR_Lykashenko: "§YLukashenko§!"
  BLR_Lykashenko_desc: "Alexander Grigoryevich Lukashenko (born August 30, 1954) is a Belarusian politician, statesman and military figure. In fact, he has held the post of President of Belarus and Commander-in-Chief of the Armed Forces of Belarus since July 20, 1994. He is known for his pro-Russian views. In Belarusian and Russian-speaking societies, he has the nickname \"batka\""
- BLR_NOV_change_path: "Interaction with Novorossiya"
- BLR_NOV_change_path_desc: "We should choose how we treat Novorossiya, because it is not recognized by anyone state"
+ BLR_GrodnoAzot: "Grodno Azot"
+ BLR_GrodnoAzot_desc: "The Khimvolokno Plant branch of Grodno Azot OJSC is a large manufacturer of polyamide and polyester yarns and fibers, as well as polyamide-6 (PA-6) and polymer composite materials based on it. Each of the main types of products is produced in a wide assortment with various physical and mechanical properties and quality indicators, depending on the application"
+ BLR_PinskDrev: "Finance "PinskDrev""
+ BLR_PinskDrev_desc: "Large enterprise of the woodworking industry of Belarus, the oldest in Pinsk. We should finance their activities so that they develop further"
+ BLR_AirPort_minsk: "Expansion of the International Airport"
+ BLR_AirPort_minsk_desc: "We are ready to invest significant financial resources in the expansion of the Minsk airport"
+ BLR_dai_denyag: "Request a Loan From Russia"
+ BLR_dai_denyag_desc: "We will ask the Russian government to provide us with a loan"
  BLR_Severstal: "Severstalbel"
  BLR_Severstal_desc: "CJSC SEVERSTALBEL specializes in the sale and processing of rolled metal in the Republic of Belarus, is part of the sales segment of the Severstal Russian Steel division."
  BLR_ros_atom: "ROS ATOM"
@@ -979,16 +985,8 @@
  BLR_Problem_duying_vilages_desc: "It's time for our state to decide what to do with dying villages"
  BLR_Economic: "Belarusian economy"
  BLR_Economic_desc: "We need to develop our economy, and we are using a number of measures to successfully implement this development."
- BLR_GrodnoAzot: "Grodno Azot"
- BLR_GrodnoAzot_desc: "The Khimvolokno Plant branch of Grodno Azot OJSC is a large manufacturer of polyamide and polyester yarns and fibers, as well as polyamide-6 (PA-6) and polymer composite materials based on it. Each of the main types of products is produced in a wide assortment with various physical and mechanical properties and quality indicators, depending on the application"
- BLR_PinskDrev: "Finance "PinskDrev""
- BLR_PinskDrev_desc: "Large enterprise of the woodworking industry of Belarus, the oldest in Pinsk. We should finance their activities so that they develop further"
- BLR_AirPort_minsk: "Expansion of the International Airport"
- BLR_AirPort_minsk_desc: "We are ready to invest significant financial resources in the expansion of the Minsk airport"
  BLR_metro_minsk: "Expand the Minsk Metro"
  BLR_metro_minsk_desc: ""
- BLR_Russia_economic: "Russian monopoly"
- BLR_Russia_economic_desc: "A number of Russian companies are ready to start working on our territory. Whether to allow them or not is our choice"
  BLR_it_industries_help: "Help Domestic It Developers"
  BLR_it_industries_help_desc: "It is necessary to help our IT sector with everything we can - this is the future of our country"
  BLR_viber: "Viber"
@@ -2213,6 +2211,17 @@
  belarus_another.58.d: "The protests are gaining momentum, some administrative buildings have already been seized, as well as riots are already beginning in other cities, in addition, some of the generals have defected to the rebels, what should we do?."
  belarus_another.58.a: "We Will Fight To The End!"
  belarus_another.58.b: "We Will Peacefully Surrender Power"
+
+ belarus_another.59.t: "Belarus is Asking For A Loan"
+ belarus_another.59.d: "The Belarusian government is asking us to provide them with a loan, we may not be sure of their solvency, but the influence that we will receive will definitely pay for itself."
+ belarus_another.59.a: "Let's Give Them Money"
+ belarus_another.59.b: "We Will Refuse"
+ belarus_another.60.t: "Russian Loan"
+ belarus_another.60.d: "The Russian government has agreed to provide us with a loan."
+ belarus_another.60.a: "Good"
+ belarus_another.61.t: "Russian Loan"
+ belarus_another.61.d: "The Russian government refused to give us a loan."
+ belarus_another.61.a: "Sad"
 
  belarus_GDL.1.t: "Belarus Wants to Rule Our Country."
  belarus_GDL.1.d: "Pro-Belarusian nationalists have a great influence in our country, so the Belarusian authorities decided to give us an ultimatum - to allow them into the government or face the consequences. What do we say to that?"
