--- a/localisation/simp_chinese/MD_focus_BUL_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BUL_l_simp_chinese.yml
@@ -269,7 +269,7 @@
  bulg.1.b: "拒绝。"
  bulg.2.t: "他们拒绝投资"
  bulg.2.d: "他们拒绝投资我们。"
- bulg.2.a: "悲剧。"
+ bulg.2.a: "悲哀"
  bulg.3.t: "他们会投资我们"
  bulg.3.d: "我们的经济伙伴将投资于我们的经济。"
  bulg.3.a: "非常感谢！"
