--- a/localisation/simp_chinese/MD_focus_GEO_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GEO_l_simp_chinese.yml
@@ -926,7 +926,7 @@
  geo_misc.3.b: "从不"
  geo_misc.4.t: "俄罗斯拒绝"
  geo_misc.4.d: "俄罗斯不会与我们签订任何条约。"
- geo_misc.4.a: "悲剧。"
+ geo_misc.4.a: "悲哀"
  geo_misc.5.t: "格鲁吉亚提出互不侵犯条约"
  geo_misc.5.d: "格鲁吉亚希望通过不让我们两国签署协议来实现该地区的稳固和平。"
  geo_misc.5.a: "好主意!"
@@ -934,10 +934,10 @@
  geo_misc.5.c: "从不"
  geo_misc.6.t: "奥塞梯拒绝"
  geo_misc.6.d: "奥塞梯不会与我们签署协议。"
- geo_misc.6.a: "悲剧。"
+ geo_misc.6.a: "悲哀"
  geo_misc.7.t: "阿布哈兹拒绝"
  geo_misc.7.d: "阿布哈兹不会与我们签署协议。"
- geo_misc.7.a: "悲剧。"
+ geo_misc.7.a: "悲哀"
  geo_misc.8.t: "格鲁吉亚建议我们加入外高加索"
  geo_misc.8.d: "格鲁吉亚共产党人希望在他们的领导下建立一个共产主义的外高加索地区。他们希望我们以傀儡国家身份融入他们的联盟。"
  geo_misc.8.a: "一切为了红色十月！"
