--- a/localisation/simp_chinese/MD_focus_HEZ_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_HEZ_l_simp_chinese.yml
@@ -445,7 +445,7 @@
  hezbollah_events.22.o1: "哈"
  hezbollah_events.7.t: "我们的突袭被打败了！"
  hezbollah_events.7.d: "不幸的是，今天我们的胜算不大。我们没能从敌人那里抢到任何装备。"
- hezbollah_events.7.o1: "悲哀。"
+ hezbollah_events.7.o1: "悲哀"
  hezbollah_events.14.t: "我们洗劫了敌人的军队！"
  hezbollah_events.14.d: "在全能的安拉的帮助下和我们战士的勇敢意志，我们已轻微地破坏了敌人的武装部队！"
  hezbollah_events.14.o1: "荣耀归于真主！"
@@ -463,7 +463,7 @@
  hezbollah_events.17.o1: "真主保佑！"
  hezbollah_events.20.t: "我们的突袭被打败了！"
  hezbollah_events.20.d: "不幸的是，今天我们的胜算不大。我们没能从敌人那里抢到任何装备。"
- hezbollah_events.20.o1: "悲哀。"
+ hezbollah_events.20.o1: "悲哀"
  hezbollah_events.16.t: "我们的突袭被打败了！"
  hezbollah_events.16.d: "不幸的是，今天我们的胜算不大。我们没能从敌人那里抢到任何装备。"
  hezbollah_events.16.o1: "悲哀。"
