--- a/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
@@ -2436,7 +2436,7 @@
  sov_other.23.a: "多么棒的提议啊！"
  sov_other.24.t: "与朝鲜的交易"
  sov_other.24.d: "不幸的是，朝鲜政府拒绝了我们的协议，我们再次对他们感到失望。"
- sov_other.24.a: "悲剧"
+ sov_other.24.a: "悲哀"
  sov_other.25.t: "与朝鲜的交易"
  sov_other.25.d: "俄罗斯与朝鲜达成协议，购买火炮装备，其中一些俄罗斯政府最终分配给了我们。"
  sov_other.25.a: "很好"
