--- a/localisation/simp_chinese/MD_focus_USA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_USA_l_simp_chinese.yml
@@ -1834,7 +1834,7 @@
  donald_trump_news.8.o1: "美利坚！"
  donald_trump_news.8.o2: "美国人又一次战胜了他们自己…"
  donald_trump_news.9.t: "美国计划在月球上建造前哨基地"
- donald_trump_news.9.d: "今天早些时候，特朗普总统宣布，美国将寻求在月球上设置前哨站，以收集科学数据。然而，这一新进展并不令人惊讶，因为总统已经暗示了数周。在今天的白宫新闻发布会上，当被问及这是否会导致殖民化时，特朗普回答说：“我们可能殖民月球，也可能不会。这取决于。”\n\n许多人热情高涨，有些人引用了月球的采矿潜力，有些人只是对在月球上生活的前景感到兴奋。无论你是谁，这都是一个令人兴奋的时刻。"
+ donald_trump_news.9.d: "今天早些时候，特朗普总统宣布，美国将寻求在月球上设置前哨站，以收集科学数据。然而，这一新进展并不令人惊讶，因为总统已经暗示了数周。在今天的白宫新闻发布会上，当被问及这是否会导致殖民化时，特朗普回答说：“我们可能殖民月球，也可能不会。这真的要看情况。”\n\n许多人热情高涨，有些人引用了月球的采矿潜力，有些人只是对在月球上生活的前景感到兴奋。无论你是谁，这都是一个令人兴奋的时刻。"
  donald_trump_news.9.o1: "我们的影响力进一步扩大！"
  donald_trump_news.9.o2: "这种做法像帝国主义吗？"
  donald_trump_news.10.t: "美国扩大在月球上的殖民地"
