--- a/localisation/english/MD_ideas_l_english.yml
+++ b/localisation/english/MD_ideas_l_english.yml
@@ -200,8 +200,10 @@
  state_system_desc: "As a rule, where the broom does not reach the dust will not vanish of itself. The weapons of criticism cannot replace the criticism of weapons. The Chinese army no longer hid behind the border wall trembling."
  chastity_paifang: "Peaceful Coexistence"
  chastity_paifang_desc: "Since the founding of the People's Republic, Chinese foreign policy has been guided by the Five Principles of Peaceful Coexistence. These principles include mutual respect for sovereignty and territorial integrity, mutual non-aggression, non-interference in the internal affairs of other states, equality and mutual benefit, and peaceful coexistence. As a result of these principles, China has maintained an anti-interventionist stance while championing Westphalian state sovereignty."
- chabuduo: "Chabuduo"
- chabuduo_desc: "Chabuduo - or \"Close enough\", is the unique Chinese art of cutting corners in order to get rich fast - by hook or crook. This is influenced by the importance of money in the traditional culture, coupled with traumatic experiences in Maoist times such as the 'Great Leap Forward'. This society, obsessed with building wealth and flaunting these riches to others, have created many social and environmental problems, but also ensures that people work hard to improve their position in life."
+ CHI_chabuduo: "Chabuduo"
+ CHI_chabuduo_desc: "Chabuduo - or \"Close enough\", is the unique Chinese art of cutting corners in order to get rich fast - by hook or crook. This is influenced by the importance of money in the traditional culture, coupled with traumatic experiences in Maoist times such as the 'Great Leap Forward'. This society, obsessed with building wealth and flaunting these riches to others, have created many social and environmental problems, but also ensures that people work hard to improve their position in life."
+ CHI_chabuduo_2: "Chabuduo"
+ CHI_chabuduo_2_desc: "Chabuduo - or \"Close enough\", is the unique Chinese art of cutting corners in order to get rich fast - by hook or crook. This is influenced by the importance of money in the traditional culture, coupled with traumatic experiences in Maoist times such as the 'Great Leap Forward'. This society, obsessed with building wealth and flaunting these riches to others, have created many social and environmental problems, but also ensures that people work hard to improve their position in life."
  CHI_PLA_Business_Ventures: "PLA Business Ventures"
  CHI_PLA_Business_Ventures_desc: "From modest beginnings in the 1970s, in order to address the lack of military funding, the commercial activities of China’s People’s Liberation Army (PLA) have now developed into a veritable business empire. Almost every sector of China’s rapidly expanding economy has its quota of military companies. Increasingly, the largest of these businesses are beginning to resemble the chaebols, the conglomerates that dominate the Republic of Korea’s economy."
  CHI_PLA_Business_Ventures2: "Decline of PLA Business Ventures"
@@ -260,6 +262,8 @@
  ceremony_in_khentii_2_desc: "The victory in Khentii Mountains still inspire us for recapture lost land."
  prosperity_of_borderland: "Prosperity Of Borderland"
  prosperity_of_borderland_desc: "The inland and the borderland are closely related, and both are an inseparable part of China"
+ chinese_khalkha: "Shield Of China"
+ chinese_khalkha_desc: "The word Khalkha means shield in the Mongolian language, and we have taken back the strong shield of our north."
  jebtsundamba_khutuktu: "Jebtsundamba Khutuktu"
  jebtsundamba_khutuktu_desc: "The Jebtsundamba Khutuktu is a title given to the spiritual head of the Gelug lineage of Tibetan Buddhism in Outer Mongolia region. He would bless we Mongolian people."
  mongolia_rely_to_china: "Mongolia Rely To China"
