--- a/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
@@ -1479,7 +1479,7 @@
  south_china_sea_clash.11.b: "中沙群岛可以共享。"
  south_china_sea_clash.11.c: "我们应该放弃对这些岛屿的控制。"
  china.56.t: "外蒙古特别军事行动结束！"
- china.56.d: "外蒙古特别军事行动即将结束。面对猛烈的南方攻势，乌兰巴托当局毫无悬念地惨败，蒙古高原迎来了昔日的主人。如果规划外蒙古的未来成为当前的当务之急，我们的选择是什么？"
+ china.56.d: "外蒙古特别军事行动即将结束。面对来自南方的猛烈攻势，乌兰巴托当局毫无悬念地惨败，蒙古高原迎来了昔日的主人。如果规划外蒙古的未来成为当前的当务之急，我们的选择是什么？"
  china.56.a: "外蒙古特别行政区今日成立"
  china.56.b: "整个外蒙古地区终于回到了祖国的怀抱"
  china.56.c: "我们有别的想法"
