--- a/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
@@ -172,8 +172,6 @@
  significant_power_projection_desc: "该国通过在其他国家建立多个海外军事基地而拥有了可观的海外军事力量投射能力，但这一威慑范围仅覆盖了部分地区。"
  massive_power_projection: "雄厚的军事力量投射能力"
  massive_power_projection_desc: "该国在全球各大洲拥有大量海外军事基地，堪称超级大国。它能够在弹指间将其部队派遣至世界的任何一个角落。"
- chabuduo: "差不多"
- chabuduo_desc: "差不多，或“不拘小节”，是中国一种独特的，为了快速致富而不择手段投机取巧的本领。这是受传统文化中金钱的重要性与毛泽东时代“大跃进”等刻骨铭心经历的影响。这种拜金的风气造成了许多社会和环境问题，但也促使着人们为改善自己的生活条件和社会地位而努力工作。"
  CHI_PLA_Business_Ventures: "解放军经商"
  CHI_PLA_Business_Ventures_desc: "中国人民解放军的经商行为从20世纪70年代为了解决军费不足而开始的，现在已经发展成为一个名副其实的商业帝国。在中国迅速发展的经济中，几乎所有领域都有军工企业的身影。其中规模最大的企业开始变得与主导大韩民国经济的财团 - 财阀相似。"
  CHI_PLA_Business_Ventures2: "解放军商业企业的衰亡"
@@ -1047,3 +1045,9 @@
  lao_vietnan_treaty_desc: "老挝共产党和越南共产党于1977年7月18日在万象签署的条约，是当时越南构思建立“印度支那联邦”的重要布局。"
  china_reunification: "中国统一"
  china_reunification_desc: "经过无数艰苦卓绝的战斗，中国终于实现了统一。中国向世界强国又迈进了一步。"
+ CHI_chabuduo: "差不多"
+ CHI_chabuduo_desc: "差不多，或“不拘小节”，是中国一种独特的，为了快速致富而不择手段投机取巧的本领。这是受传统文化中金钱的重要性与毛泽东时代“大跃进”等刻骨铭心经历的影响。这种拜金的风气造成了许多社会和环境问题，但也促使着人们为改善自己的生活条件和社会地位而努力工作。"
+ CHI_chabuduo_2: "差不多"
+ CHI_chabuduo_2_desc: "差不多，或“不拘小节”，是中国一种独特的，为了快速致富而不择手段投机取巧的本领。这是受传统文化中金钱的重要性与毛泽东时代“大跃进”等刻骨铭心经历的影响。这种拜金的风气造成了许多社会和环境问题，但也促使着人们为改善自己的生活条件和社会地位而努力工作。"
+ chinese_khalkha: "中国之盾"
+ chinese_khalkha_desc: "喀尔喀一词在蒙古语中是盾牌的意思，我们拿回了我们北方的坚盾。"
