--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -275,6 +275,8 @@
  HKG_millitary_block_tt: "§WAs a §YS.A.R§! of §O[CHI.GetFlag]China§!, §Y[HKG.GetFlag]Hong Kong§! is not allowed to have any army and cannot change its military policy.§!"
  OPEN_LegCo_BUTTON: "Legislative Council of the Hong Kong S.A.R"
  OPEN_LegCo_BUTTON_TT: "WIP DESC"
+ CLOSE_LegCo_BUTTON: "Close the LegCo"
+ HKG_LegCo_TITLE: "Legislative Council"
  HONG_KONG_POLITICS_TT: "\nThe Politics of §Y[HKG.GetFlag]Hong Kong§! could be devided into three camp, §CPro-establishment camp§!, §8Pan-democracy camp§! and §GLocalist camp§!. Seats in the Legislative Council are decided by their approval ratings."
  ###DYNAMIC MODIFIERS
 #Housing Issue
