nato armenia fix

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -39,6 +39,7 @@ v1.10.0
   - Fixed a broken European Parliament icon
   - Fixed Black Sea country trade path dead lock error
   - Fixed Canada getting a free bumping to Neo Imperialism
+  - Fixed Armenian focus about NATO integration
 
  Content:
   - NEW TREE: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina
