--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -754,16 +754,18 @@
  BLR_ArmyBelarus_in_Venesuela_desc: "Venezuela turned out to be interested in military cooperation with us and invited our specialists to solve the pressing problems of its army. Our special forces will be sent to train soldiers of the Venezuelan army, and we will improve the air defense system"
  BLR_Pension_reform: "Pension Reform"
  BLR_Pension_reform_desc: "It's time to carry out pension reform and raise the retirement age"
+ BLR_New_concept_security: "New Concept of National Security"
+ BLR_New_concept_security_desc: "Our defensive concept needs to be updated and we will make new changes to our law"
  BLR_Minsk_Agreements: "Minsk Agreements"
  BLR_Minsk_Agreements_desc: "We are ready to promote peace in Ukraine and are ready to offer our country as a platform for negotiations to establish peace in Ukraine"
  BLR_war_is_war: "War Is War, but Money..."
  BLR_war_is_war_desc: "Despite the dramatic events taking place in Ukraine, we are not ready to lose such a profitable partner at the moment and are ready to sell them certain equipment"
  BLR_Zimbabwe: "Trip to Zimbabwe"
  BLR_Zimbabwe_desc: "We will go on a visit to Zimbabwe to conclude contracts for the supply of our products"
- BLR_trade_russia_ukraine: "Establish Trade With Russia and Ukraine"
- BLR_trade_russia_ukraine_desc: "We will take advantage of the moment of discord of our neighbors and take advantage of it"
- BLR_Special_Operation: "Special Military Operation"
- BLR_Special_Operation_desc: "Russia has begun to conduct a special military operation on the territory of Ukraine. We clearly understand that sooner or later we will have to get involved in this adventure. Are we ready?"
+ BLR_100dney: "100 Ideas For Belarus"
+ BLR_100dney_desc: "The project "100 Ideas for Belarus", aimed at identifying gifted and talented youth, developing their scientific activities and promoting promising innovative developments"
+ BLR_stroiotryad: "Revive Student Construction Brigade"
+ BLR_stroiotryad_desc: "We will revive the practice of Student Construction Brigades from the USSR. For an incentive, we will exempt them from taxes"
  BLR_People_Militia: "Creation of People’s Militia"
  BLR_People_Militia_desc: "We are ready to adopt a law on the creation of a people's militia, which will be a kind of reserve for Territorial defense. In each village, village there should be a trained group of people to counter the enemy, with subsequent transformation into a partisan movement"
  BLR_Excursion_Warsaw: "Excursion to Warsaw"
@@ -1111,7 +1113,6 @@
  BLR_fly_protasevich: "Land a Ryanair Plane With Protasevich"
  BLR_Deal_with_Poland: "Deal With the Union of Poles"
  BLR_Great_stone_china: "Great Stone Park"
- BLR_New_concept_security: "New Concept of National Security"
  BLR_belorusisation_vilnus: "Belarusianization of Vilnius"
  BLR_belorusisation_vilnus_desc: "Vilnius has long been a disputed region that we wanted to possess, but now that we have mastered it, we are ready to promote to the masses the idea of settling the region with Belarusians."
  BLR_belorusisation_sudovia: "Belarusianization of Sudovia"
@@ -1298,10 +1299,6 @@
 
  BLR_brsm_category: "Belarusian Republican Youth Union"
  BLR_brsm_category_desc: "The Belarusian Republican Youth Union is a youth public association in the Republic of Belarus. It is the largest youth association in the country. Its activities are funded by the state."
- BLR_100dney: "100 Ideas For Belarus"
- BLR_100dney_desc: "The project "100 Ideas for Belarus", aimed at identifying gifted and talented youth, developing their scientific activities and promoting promising innovative developments"
- BLR_stroiotryad: "Revive Student Construction Brigade"
- BLR_stroiotryad_desc: "We will revive the practice of Student Construction Brigades from the USSR. For an incentive, we will exempt them from taxes"
  BLR_union_programm: "Coordinate Union Programs With Russia"
  BLR_union_programm_desc: "It is necessary to strengthen the integration of our countries, so we will agree on several roadmaps for integration with Russia"
 
