--- a/localisation/english/focus_filter_tag_l_english.yml
+++ b/localisation/english/focus_filter_tag_l_english.yml
@@ -36,6 +36,7 @@
  FOCUS_FILTER_ARMY: "Army"
  FOCUS_FILTER_RENEWABLE_ENERGY_INFRASTRUCTURE: "Renewable Energy Infrastructure"
  FOCUS_FILTER_SKODA: "Škoda"
+ FOCUS_FILTER_SPACE: "Space"
  #Russia
  FOCUS_FILTER_PMC_WAGNER: "PMC Wagner"
  FOCUS_FILTER_RUSSIA_ARMY: "Russian Army"
