--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -708,6 +708,10 @@
  BLR_National_Library_desc: "New building of the National Library of Belarus, in the construction of which the whole country took part, was opened to users on June 16, 2006."
  BLR_delta_city: ""Delta City" Business Center"
  BLR_delta_city_desc: "During the National Exhibition of Serbia in Minsk, a major contract was signed for the construction of the Delta City business center and the development of the territory near the National Library with a total investment of several billion euros (the developer is Dana Holdings, owned by Serbian businessmen)"
+ BLR_Kal: "Joint Potassium Trader"
+ BLR_Kal_desc: "We will propose to Russia to create a joint joint stock company that will be our common Potassium trader."
+ BLR_Kal2: "Close A Joint Trader With Potassium"
+ BLR_Kal2_desc: "Recent criminal cases initiated by us against employees of the Russian URALKALI, as well as abuse of authority on their part, forced us to close a joint trader and create our own."
  BLR_BRSM: "Belarusian Republican Youth Union"
  BLR_BRSM_desc: "The Belarusian Republican Youth Union is a youth public association in the Republic of Belarus. It is the largest youth association in the country and is supported by Alexander Lukashenko. Its activities are funded by the state."
  BLR_Potato_Empire: "Potato Empire"
@@ -1381,6 +1385,8 @@
  BLR_national_library: "National Library"
  BLR_financial_crisis_2008: "Financial Crisis"
  BLR_Europe_last_dictator: "Europe Last Dictator"
+ BLR_kal_with: "CJSC"Belarusian Potash Company""
+ BLR_kal_without: "JSC "Belarusian Potash Company""
  BLR_BRSM: "BRSM"
  BLR_BRSM1: "BRSM"
  BLR_Poles_goes: "Poles Leaving Belarus"
@@ -1691,6 +1697,8 @@
  LIT_more_than_30_support_for_communists_TT: "§YLietuvos Socialistu Partija§! has more than §Y30%§! support."
  POL_more_than_30_support_for_nationalists_TT: "§YRuch Narodowy§! has more than §Y30%§! support."
  BLR_POL_more_than_50_percent_influence_TT: "§Y[BLR.GetAdjective]§! Influence in [POL.GetNameWithFlag] is Over 50%"
+ BLR_with_tt: "Additional Income: $$§G0.150§!\n"
+ BLR_without_tt: "Additional Income: $$§G0.210§!\n"
  BLR_tourism_tt: "Additional Income: $$§G0.150§!\n"
  BLR_tourism3_tt: "Additional Income: $$§G0.250§!\n"
  BLR_tourism4_tt: "Additional Income: $$§G0.400§!\n"
@@ -2219,6 +2227,17 @@
  belarus_another.61.t: "Russian Loan"
  belarus_another.61.d: "The Russian government refused to give us a loan."
  belarus_another.61.a: "Sad"
+
+ belarus_another.62.t: "Belarus Proposes To Create a Joint Potassium Trader"
+ belarus_another.62.d: "The Belarusian government has proposed to create a joint potassium trader of the two enterprises. Uralkali and Belaruskali, thus we will be able to profit more profitably from this resource."
+ belarus_another.62.a: "We Agree"
+ belarus_another.62.b: "We Disagree"
+ belarus_another.63.t: "Joint Potassium Trader"
+ belarus_another.63.d: "The Russian government has agreed to create a joint potash trading company."
+ belarus_another.63.a: "Nice"
+ belarus_another.64.t: "Belarus Closes Joint Potassium Trader"
+ belarus_another.64.d: "The confrontation between our two Potassium trading enterprises has reached its limit and the Belarusian government has decided to allocate its own company and create its own trader."
+ belarus_another.64.a: "Sad"
 
  belarus_GDL.1.t: "Belarus Wants to Rule Our Country."
  belarus_GDL.1.d: "Pro-Belarusian nationalists have a great influence in our country, so the Belarusian authorities decided to give us an ultimatum - to allow them into the government or face the consequences. What do we say to that?"
